--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "process": "^0.11.10"
   }
 }
