--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "homepage": "https://github.com/vuquangpham/boilcms#readme",
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "nodemon": "^3.0.1",
-    "path": "^0.12.7",
-    "process": "^0.11.10"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
