--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
+    "ip": "^1.1.8",
     "nodemon": "^3.0.1"
   }
 }
