feat: change db

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3000
-DB_URI = mongodb+srv://anhtu123:hOALmltxeq44ITx6@cluster0.ig9fqnx.mongodb.net/
+DB_USERNAME=vuquangpham2909
+DB_PASSWORD=hAHiXlV8MOlrHR2Z
+DB_URI=mongodb+srv://<username>:<password>@boilcms.s4lwul3.mongodb.net/?retryWrites=true&w=majority
