refactor: connect database

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3000
+DB_NAME=test
 DB_USERNAME=vuquangpham2909
 DB_PASSWORD=hAHiXlV8MOlrHR2Z
-DB_URI=mongodb+srv://<username>:<password>@boilcms.s4lwul3.mongodb.net/?retryWrites=true&w=majority
+DB_URI=mongodb+srv://<username>:<password>@boilcms.s4lwul3.mongodb.net/<dbname>?retryWrites=true&w=majority
