--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-minify-html": "^0.12.0",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.5"
   },
