--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "express-minify-html": "^0.12.0",
     "mongodb": "^6.0.0",
-    "mongoose": "^7.4.5"
+    "mongoose": "^7.4.5",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
