--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express-minify-html": "^0.12.0",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
