--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/vuquangpham/boilcms#readme",
   "dependencies": {
+    "@viivue/atomic-css": "^1.1.10",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
