--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
   "homepage": "https://github.com/vuquangpham/boilcms#readme",
   "dependencies": {
     "@viivue/atomic-css": "^1.1.10",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-minify-html": "^0.12.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
