--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
+    "quill": "^1.3.6",
     "sharp": "^0.32.6",
     "validator": "^13.11.0"
   },
