--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "frontend:build": "cross-env DEV_MODE=false webpack --config ./configs/webpack.config.build.js",
     "frontend:development": "cross-env DEV_MODE=true webpack serve --config ./configs/webpack.config.dev.js",
     "start": "concurrently --kill-others \"npm run backend:development\" \"npm run frontend:development\"",
-    "build": "concurrently --kill-others \"npm run backend:build\" \"npm run frontend:build\""
+    "build": "concurrently --kill-others \"npm run backend:build\" \"npm run frontend:build\"",
+    "vite-build": "vite build"
   },
   "repository": {
     "type": "git",
@@ -53,9 +54,10 @@
     "nodemon": "^3.0.1",
     "postcss-loader": "^7.3.3",
     "raw-loader": "^4.0.2",
-    "sass": "^1.69.2",
+    "sass": "^1.69.4",
     "sass-loader": "^13.3.2",
     "terser-webpack-plugin": "^5.3.9",
+    "vite": "^4.5.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
