--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-minify-html": "^0.12.0",
+    "isomorphic-dompurify": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
     "quill": "^1.3.6",
-    "sanitize-html": "^2.11.0",
     "sharp": "^0.32.6",
     "validator": "^13.11.0"
   },
