feat: introduce email

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ DB_URI=mongodb+srv://<username>:<password>@boilcms.s4lwul3.mongodb.net/<dbname>?
 JWT_SECRET_KEY=random-jwt-secret-key-super-expensive-pro
 JWT_EXPIRED_IN=90d
 JWT_COOKIES_EXPIRES_IN=90
+
+EMAIL_ADDRESS=boilcmsco@gmail.com
+EMAIL_PASSWORD=cbcopiheaczutaot
