--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "express-minify-html": "^0.12.0",
     "isomorphic-dompurify": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "quill": "^1.3.6",
     "sharp": "^0.32.6",
     "validator": "^13.11.0"
